--- a/bootstrap/dsetup.ini
+++ b/bootstrap/dsetup.ini
@@ -2,21 +2,21 @@ set cpu 7094 32k ctss
 ! ./mkbcdtape -o sysin.tp dsetup.job
 ! ./mkbcdtape -o sysck2.tp dsetup.cmd
 set cpu hist=5000
-at mta0 sysfap.tp
-set mta0 locked
-at mta1 sysin.tp
+at mta1 sysfap.tp
 set mta1 locked
-at mta2 sysut1.tp
-at mtb2 sysut2.tp
-at mta3 sysut3.tp
-at mtb3 sysut4.tp
-at mtb0 sysou1.tp
-at mta4 sysck2.tp
-at mtb4 sysck1.tp
-at mtb1 syspp1.tp
+at mta2 sysin.tp
+set mta2 locked
+at mta3 sysut1.tp
+at mtb3 sysut2.tp
+at mta4 sysut3.tp
+at mtb4 sysut4.tp
+at mtb1 sysou1.tp
+at mta5 sysck2.tp
+at mtb5 sysck1.tp
+at mtb2 syspp1.tp
 set mtc disable
-set cp1 disable
-set cr1 disable
+set cdp1 disable
+set cdr1 disable
 set lp1 disable
 set dk0 format ha2 type=2302 module=0 chan=c ctss
 set dk1 format ha2 type=2302 module=4 chan=c
@@ -33,6 +33,6 @@ at lp0 sys.log
 at cp0 -f bin syspun.crd
 at cr0 end.job
 dep sw1 0
-bo mta0
+bo mta1
 c
 quit
