--- a/bootstrap/ibfap.ini
+++ b/bootstrap/ibfap.ini
@@ -1,27 +1,27 @@
 set cpu 7094 32k ctss 
 ! ./mkbcdtape -o sysin.tp ibfap.job
 set cpu hist=5000
-at mta0 base_sys.tp
-set mta0 locked
-at mta1 sysin.tp
+at mta1 base_sys.tp
 set mta1 locked
-;at mta2 -f p7b sysut1.tp
-at mtb2 sysut2.tp
-at mta3 sysut3.tp
-at mtb3 sysut4.tp
-at mtb0 sysou1.tp
-at mta2 srctape3.tp
-at mtb4 sysck1.tp
-at mtb1 -f p7b syspp1.tp
+at mta2 sysin.tp
+set mta2 locked
+;at mta3 -f p7b sysut1.tp
+at mtb3 sysut2.tp
+at mta4 sysut3.tp
+at mtb4 sysut4.tp
+at mtb1 sysou1.tp
+at mta3 srctape3.tp
+at mtb5 sysck1.tp
+at mtb2 -f p7b syspp1.tp
 set mtc disable
-set cp1 disable
-set cr1 disable
+set cdp1 disable
+set cdr1 disable
 set lp1 disable
 at lp0 sys.log
-at cp0 -f bin syspun.crd
-at cr0 end.job
+at cdp0 -f bin syspun.crd
+at cdr0 end.job
 dep sw1 0
-bo mta0
-at mta2 sysfap.tp
+bo mta1
+at mta3 sysfap.tp
 c
 quit
