Initial automatic CTSS loader program for IBSYS.

--- a/bin/ctss.ini
+++ b/bin/ctss.ini
@@ -18,12 +18,14 @@ at hd0 dasd/DRUM2.BIN
 at lp0 sys.log
 at cdp0 syspun.crd
 at cdr0 end.job
-set debug stderr
+;set debug stderr
 dep keys 236362626060
-;set cpu debug=ctss
-;set dk debug=cmd;detail
-;set ch debug=CHANNEL;CMD;DETAIL;EXP;SENSE;trap
-;set com debug=cmd;detail;exp;channel;sense
+set cpu debug=ctss
+set dk debug=cmd;detail
+set ch debug=CHANNEL;CMD;DETAIL;EXP;SENSE;trap;cha;chb,chc;che
+set lp debug=CHANNEL;CMD;DETAIL;EXP
+set com debug=cmd;detail;exp;channel;sense
+set mta debug=cmd;detail;exp
 set mta1 format=p7b
 set mtb2 format=p7b
 set mtb3 format=p7b
