--- a/bootstrap/dsetup.ini
+++ b/bootstrap/dsetup.ini
@@ -1,6 +1,5 @@
 set cpu 7094 32k ctss 
 ! ./mkbcdtape -o sysin.tp dsetup.job
-! ./mkbcdtape -o sysck2.tp dsetup.cmd
 set cpu hist=5000
 at mta1 sysfap.tp
 set mta1 locked
@@ -22,17 +21,20 @@ set dk0 format ha2 type=2302 module=0 chan=c ctss
 set dk1 format ha2 type=2302 module=4 chan=c
 set dk2 format ha2 type=7238 module=2 chan=c
 set hd0 units=2
-;set dk debug=cmd;detail
-;set ch debug=CHANNEL;CMD;DETAIL;EXP;SENSE;trap
-;set debug stderr
 at dk0 dasd/DISK1.BIN
 at dk1 dasd/DISK2.BIN
 at dk2 dasd/DRUM1.BIN
 at hd0 dasd/DRUM2.BIN
 at lp0 sys.log
-at cp0 -f bin syspun.crd
-at cr0 end.job
+at cdp0 -f bin syspun.crd
+at cdr0 end.job
 dep sw1 0
 bo mta1
+at cdr0 -e dsetup.cmd
+;set dk debug=cmd;detail
+;set ch debug=CHANNEL;CMD;DETAIL;EXP;SENSE;trap;DATA;CHC
+;set cdr debug=card
+;set debug dsetup.log
+dep sw1 1
 c
 quit
