--- a/bootstrap/ldctss.ini
+++ b/bootstrap/ldctss.ini
@@ -1,6 +1,11 @@
-set cpu 7094 32k ctss 
-! ./mkbcdtape -o sysin.tp setup.job
-set cpu hist=5000
+set cpu 7094 32k 
+! cp ../src/fsys4d/ioequa.fap ioequ.fap
+! ./mkctsstape -o sysin.tp ldctss.job
+! rm ioequ.fap
+! ./mkctsstape -o sysck1.tp loadsys.job
+;set cpu hist=20000
+set mta7 disable
+set chron0 enable unit=7 chan=a
 at mta1 sysfap.tp
 set mta1 locked
 at mta2 sysin.tp
@@ -22,9 +27,6 @@ set dk0 type=2302 module=0 chan=c ctss
 set dk1 type=2302 module=4 chan=c
 set dk2 type=7238 module=2 chan=c
 set hd0 units=2
-;set dk debug=cmd;detail
-;set ch debug=CHANNEL;CMD;DETAIL;EXP;SENSE;trap
-;set debug stderr
 at dk0 dasd/DISK1.BIN
 at dk1 dasd/DISK2.BIN
 at dk2 dasd/DRUM1.BIN
@@ -34,5 +36,15 @@ at cdp0 -f bin syspun.crd
 at cdr0 end.job
 dep sw1 0
 bo mta1
-! ./listtape sysou1.tp > setup.lst
-quit
+;set dk debug=cmd;detail
+;set cpu debug=prot
+;set ch debug=CHANNEL;CMD;DETAIL;EXP;SENSE;trap;data;chc
+;set chrono debug=CMD;DETAIL
+;set lp debug=cmd;detail
+;set mta debug=CMD;DETAIL
+;set mtb debug=CMD;DETAIL
+;set debug s.log
+c
+;sh cpu hist=200
+! ./listtape sysou1.tp > ldctss.lst
+
