Added some pending patches.

--- a/bootstrap/ibfap.ini
+++ b/bootstrap/ibfap.ini
@@ -10,7 +10,7 @@ at mtb3 sysut2.tp
 at mta4 sysut3.tp
 at mtb4 sysut4.tp
 at mtb1 sysou1.tp
-at mta3 srctape3.tp
+at mta3 -r srctape3.tp
 at mtb5 sysck1.tp
 at mtb2 -f p7b syspp1.tp
 set mtc disable
@@ -22,6 +22,9 @@ at cdp0 -f bin syspun.crd
 at cdr0 end.job
 dep sw1 0
 bo mta1
+det mta3
 at mta3 sysfap.tp
+sh mta
 c
+! ./listtape sysou1.tp >ibfap.lst
 quit
