--- a/bootstrap/ldctss.ini
+++ b/bootstrap/ldctss.ini
@@ -18,7 +18,7 @@ at mtb1 sysou1.tp
 at mta5 sysck2.tp
 at mtb5 sysck1.tp
 at mtb2 syspp1.tp
-at mtb6 syspp2.tp
+at mtb6 -f p7b x.tap
 set mtc disable
 set cdp1 disable
 set cdr1 disable
